提交用户,角色,机构静态页面

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/theme-triton/resources/theme-triton-all.css">
     <link rel="stylesheet" type="text/css" href="/theme-triton/resources/charts-all.css">
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=AF0716c76bcd3914a5ae6699a73fcb5a"></script>
-    <script src="/ext-all.js"></script>
+    <script src="/ext-all-debug.js"></script>
     <script src="/charts.js"></script>
     <script src="/locale-zh_CN.js"></script>
     <script src="/theme-triton/theme-triton.js"></script>
