--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
     <script src="/locale-zh_CN.js"></script>
     <script src="/theme-triton/theme-triton.js"></script>
     <script src="/exporter.js"></script>
+    <script src="/jwt-decode.min.js"></script>
     <script src="/app.js"></script>
 </head>
 <body>
