--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
     <script src="/theme-triton/theme-triton.js"></script>
     <script src="/exporter.js"></script>
     <script src="/jwt-decode.min.js"></script>
+    <script src="/tools.js"></script>
     <script src="/app.js"></script>
 </head>
 <body>
