--- a/src/main/resources/static/index-dev.html
+++ b/src/main/resources/static/index-dev.html
@@ -14,7 +14,7 @@
     <script src="/exporter.js"></script>
     <script src="/jwt-decode.min.js"></script>
     <script src="/tools.js"></script>
-    <script src="/app.js"></script>
+    <script src="/bundle.js"></script>
     <script src="/ckeditor/ckeditor.js"></script>
 </head>
 <body>
